2011-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dtp] Fix bug: Don't clobber ‘yday’ unconditionally.

	* maketime.c (tm2time): If ‘yday’ is valid, compute ‘mon’
	and ‘mday’ from it; otherwise, compute it from ‘mon’ and ‘mday’.

2011-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Fix bug: Don't confuse day of {week,year} in date parsing.

	* partime.c (merge_partime): For both conflict detection
	and actual merging, don't conflate ‘.tm_wday’ and ‘.tm_yday’.

2011-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use bundled woe/ucontext.h for cygwin.

	* Makefile.am (executables): New var.
	(bin_PROGRAMS, BUILT_SOURCES): Use $(executables).
	(EXTRA_DIST): Add woe.
	* b-isr.c [!HAVE_UCONTEXT_H && NEED_WOE_UCONTEXT_H]:
	#include woe/ucontext.h.
	(SA_ONSTACK): #define, if not already.
	(ISR_STACK_SIZE): Conditionalize on
	‘defined HAVE_SIGALTSTACK && define SIGSTKSZ’; if
	these elements are not found, default to 0 (zero).
	* woe: New directory.
	* woe/COPYING.LIB: New file.
	* woe/ucontext.c: New file.
	* woe/ucontext.h: New file.

2011-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	rlog: Output trailing newline for midline description.

	* rlog.c (main <description>): Ensure trailing newline.

2011-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	rlog: Fix bug: Output trailing newline for midline log messages.
	Ch
	Regression introduced 2010-05-24, "Rewrite parsing".

	* b-fro.c (atat_display): Take third arg ENSURE_NEWLINE_P;
	if ‘true’ and an atat is non-empty and ends without a newline,
	output a trailing newline.
	* b-fro.h (atat_display): Update func decl.
	* rcsedit.c (copystring): Update call to ‘atat_display’.
	* rlog.c (putadelta): Update call to ‘atat_display’,
	specifying ENSURE_NEWLINE_P ‘true’.
	(main <description>): Update call to ‘atat_display’.

2011-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.96

2011-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions: semi_lf, SEMI_LF

	* rcsgen.c (semi_lf): New const string.