@@ -1,5 +1,16 @@
 2011-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] Handle failure to find peer programs more gracefully.
+
+	* b-peer.c: Include "b-complain.h".
+	(LOSE): New macro.
+	(invocation_full_name): New static func.
+	(find_peer_prog): Use ‘invocation_full_name’;
+	if last slash cannot be found, don't abort;
+	instead, display a diagnostic and exit failurefully.
+
+2011-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[dtp] Fix bug: Don't clobber ‘yday’ unconditionally.
 
 	* maketime.c (tm2time): If ‘yday’ is valid, compute ‘mon’
